Release 0.3 -> Release 0.4
  * Imagebox file not found error messages for TIFFs improved (filename that 
	was bad is now included)

  * Discovered a wierd bug in acroread (I think). See huh.pdf... This seems to
	be acrobat related. It doesn't happen in gv.

  * PDF doesn't support / as a character in the name of an object such as an 
	image. Therefore when we add an image into a document we now have to 
	go through the name string and change all of the /'s to -'s. Then 
	again, this might not be a problem with PDF itself, but is certainly 
	a problem with the lexers in xpdf, gv and acroread and therefore is 
	an issue.

  * Moved all the headers into panda/, which means the demo app can now use 
	the same path for the includes as the real applications that users
	would be writing. This means that the demo application had to be
	renamed to pandademo (from panda).

  * extern "C"'ed all of the headers so that they are accessible from C++

  * Defined #defines so that headers are only included once at compilation
	time

  * Fixed the Makefile.am so that the man pages are installed as well...

  * Discovered that the Makefile.am needs to be changed for that the headers
	will install from their new location in panda/, so I had a look into
	that as well...