@@ -3,8 +3,8 @@ SUBDIRS = panda man
 noinst_PROGRAMS = pandademo
 lib_LIBRARIES = libpanda.a
 
-pandademo_SOURCES = date.c font.c info.c main.c panda.c trailer.c error.c images.c objects.c text.c utility.c xref.c
+pandademo_SOURCES = date.c font.c info.c main.c memory.c panda.c trailer.c error.c images.c objects.c text.c utility.c xref.c
 
-libpanda_a_SOURCES = date.c font.c info.c panda.c trailer.c error.c images.c objects.c text.c utility.c xref.c
+libpanda_a_SOURCES = date.c font.c info.c memory.c panda.c trailer.c error.c images.c objects.c text.c utility.c xref.c
 
 
