@@ -26,8 +26,7 @@ makedate (int year, int month, int day, int hour, int minutes, int seconds)
   // Make some space for the string we are going to return. We know this is
   // always going to be 21 characters long (so we say 30 characters to be
   // safe)
-  if ((dateString = malloc (sizeof (char) * 30)) == NULL)
-    error ("Could not make space for the date string.");
+  dateString = xmalloc(sizeof(char) * 30);
 
   // Do some insurance things to make sure we do y2k dates ok
   if (year < 100)
