@@ -81,6 +81,12 @@ void sethorizontalscaling (pdf *, double);
 void setleading (pdf *, double);
 
 /******************************************************************************
+  Memory.c
+******************************************************************************/
+
+  void *xmalloc(size_t);
+
+/******************************************************************************
   Panda.c
 ******************************************************************************/
 
